Fixed issue with classifier not predicting any tags for some examples

--- a/NLP_class/week1/week1-MultilabelClassification.ipynb
+++ b/NLP_class/week1/week1-MultilabelClassification.ipynb
@@ -1569,11 +1569,7 @@
       "metadata": {
         "id": "Lj9njqE-EtiZ",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1984
-        },
-        "outputId": "ab3e4547-c792-4d9e-f556-7840f73dbc3f"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -1602,157 +1598,8 @@
         "    print(\"\\npenalty={penalty}, class_weight={class_weight}, C={C}\".format(**params))\n",
         "    print_evaluation_scores(y_val, y_val_predicted_labels_tfidf)"
       ],
-      "execution_count": 75,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "penalty=l1, class_weight=None, C=0.1\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-            "  'precision', 'predicted', average, warn_for)\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Accuracy: 0.287\n",
-            "F1 score - macro: 0.428, micro: 0.591, weighted: 0.567\n",
-            "Precision - macro: 0.291, micro: 0.404, weighted: 0.441\n",
-            "\n",
-            "penalty=l1, class_weight=None, C=0.3\n",
-            "Accuracy: 0.336\n",
-            "F1 score - macro: 0.478, micro: 0.644, weighted: 0.621\n",
-            "Precision - macro: 0.328, micro: 0.457, weighted: 0.489\n",
-            "\n",
-            "penalty=l1, class_weight=None, C=1.0\n",
-            "Accuracy: 0.366\n",
-            "F1 score - macro: 0.509, micro: 0.675, weighted: 0.653\n",
-            "Precision - macro: 0.349, micro: 0.488, weighted: 0.517\n",
-            "\n",
-            "penalty=l1, class_weight=None, C=3.0\n",
-            "Accuracy: 0.368\n",
-            "F1 score - macro: 0.522, micro: 0.683, weighted: 0.663\n",
-            "Precision - macro: 0.352, micro: 0.489, weighted: 0.520\n",
-            "\n",
-            "penalty=l1, class_weight=None, C=10.0\n",
-            "Accuracy: 0.341\n",
-            "F1 score - macro: 0.511, micro: 0.662, weighted: 0.648\n",
-            "Precision - macro: 0.330, micro: 0.453, weighted: 0.490\n",
-            "\n",
-            "penalty=l1, class_weight=balanced, C=0.1\n",
-            "Accuracy: 0.028\n",
-            "F1 score - macro: 0.339, micro: 0.420, weighted: 0.542\n",
-            "Precision - macro: 0.194, micro: 0.229, weighted: 0.387\n",
-            "\n",
-            "penalty=l1, class_weight=balanced, C=0.3\n",
-            "Accuracy: 0.056\n",
-            "F1 score - macro: 0.388, micro: 0.482, weighted: 0.568\n",
-            "Precision - macro: 0.223, micro: 0.280, weighted: 0.407\n",
-            "\n",
-            "penalty=l1, class_weight=balanced, C=1.0\n",
-            "Accuracy: 0.105\n",
-            "F1 score - macro: 0.431, micro: 0.535, weighted: 0.593\n",
-            "Precision - macro: 0.250, micro: 0.322, weighted: 0.426\n",
-            "\n",
-            "penalty=l1, class_weight=balanced, C=3.0\n",
-            "Accuracy: 0.144\n",
-            "F1 score - macro: 0.446, micro: 0.557, weighted: 0.600\n",
-            "Precision - macro: 0.257, micro: 0.337, weighted: 0.426\n",
-            "\n",
-            "penalty=l1, class_weight=balanced, C=10.0\n",
-            "Accuracy: 0.163\n",
-            "F1 score - macro: 0.435, micro: 0.554, weighted: 0.587\n",
-            "Precision - macro: 0.244, micro: 0.327, weighted: 0.410\n",
-            "\n",
-            "penalty=l2, class_weight=None, C=0.1\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-            "  'precision', 'predicted', average, warn_for)\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Accuracy: 0.181\n",
-            "F1 score - macro: 0.140, micro: 0.433, weighted: 0.392\n",
-            "Precision - macro: 0.099, micro: 0.280, weighted: 0.315\n",
-            "\n",
-            "penalty=l2, class_weight=None, C=0.3\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-            "  'precision', 'predicted', average, warn_for)\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Accuracy: 0.268\n",
-            "F1 score - macro: 0.322, micro: 0.565, weighted: 0.531\n",
-            "Precision - macro: 0.215, micro: 0.386, weighted: 0.417\n",
-            "\n",
-            "penalty=l2, class_weight=None, C=1.0\n",
-            "Accuracy: 0.335\n",
-            "F1 score - macro: 0.446, micro: 0.642, weighted: 0.615\n",
-            "Precision - macro: 0.303, micro: 0.458, weighted: 0.486\n",
-            "\n",
-            "penalty=l2, class_weight=None, C=3.0\n",
-            "Accuracy: 0.361\n",
-            "F1 score - macro: 0.491, micro: 0.670, weighted: 0.645\n",
-            "Precision - macro: 0.335, micro: 0.482, weighted: 0.510\n",
-            "\n",
-            "penalty=l2, class_weight=None, C=10.0\n",
-            "Accuracy: 0.363\n",
-            "F1 score - macro: 0.506, micro: 0.675, weighted: 0.654\n",
-            "Precision - macro: 0.340, micro: 0.481, weighted: 0.510\n",
-            "\n",
-            "penalty=l2, class_weight=balanced, C=0.1\n",
-            "Accuracy: 0.057\n",
-            "F1 score - macro: 0.399, micro: 0.479, weighted: 0.586\n",
-            "Precision - macro: 0.239, micro: 0.276, weighted: 0.428\n",
-            "\n",
-            "penalty=l2, class_weight=balanced, C=0.3\n",
-            "Accuracy: 0.068\n",
-            "F1 score - macro: 0.405, micro: 0.498, weighted: 0.589\n",
-            "Precision - macro: 0.240, micro: 0.293, weighted: 0.429\n",
-            "\n",
-            "penalty=l2, class_weight=balanced, C=1.0\n",
-            "Accuracy: 0.091\n",
-            "F1 score - macro: 0.422, micro: 0.523, weighted: 0.595\n",
-            "Precision - macro: 0.248, micro: 0.314, weighted: 0.431\n",
-            "\n",
-            "penalty=l2, class_weight=balanced, C=3.0\n",
-            "Accuracy: 0.119\n",
-            "F1 score - macro: 0.438, micro: 0.543, weighted: 0.601\n",
-            "Precision - macro: 0.257, micro: 0.329, weighted: 0.432\n",
-            "\n",
-            "penalty=l2, class_weight=balanced, C=10.0\n",
-            "Accuracy: 0.144\n",
-            "F1 score - macro: 0.446, micro: 0.555, weighted: 0.600\n",
-            "Precision - macro: 0.258, micro: 0.335, weighted: 0.428\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -1886,9 +1733,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 219
+          "height": 164
         },
-        "outputId": "b564904b-0852-4c86-b401-0e3e3a623d3d"
+        "outputId": "13a5eb5f-3cee-4ea5-c57d-4c9722afa17a"
       },
       "cell_type": "code",
       "source": [
@@ -1899,61 +1746,32 @@
         "model = train_model(X_train_tfidf, y_train, **params)\n",
         "#y_val_predicted_labels_tfidf = model.predict(X_val_tfidf)\n",
         "#y_val_predicted_scores_tfidf = model.decision_function(X_val_tfidf)\n",
-        "    \n",
-        "test_predictions = model.predict(X_val_tfidf)\n",
-        "test_pred_inversed = mlb.inverse_transform(test_predictions)\n",
+        "\n",
+        "# Sometimes the model probabilities are too low to predict ANY tag, so I'll make\n",
+        "# the predicted tag the union of the max probability AND any probabilities over\n",
+        "# the threshold 0.5.\n",
+        "test_pred = model.predict_proba(X_test_tfidf)\n",
+        "test_pred = (test_pred>0.5) | (test_pred == np.amax(test_pred, axis=1, keepdims=True))\n",
+        "test_pred_inversed = mlb.inverse_transform(test_pred)\n",
         "\n",
         "test_predictions_for_submission = '\\n'.join('%i\\t%s' % (i, ','.join(row)) for i, row in enumerate(test_pred_inversed))\n",
         "grader.submit_tag('MultilabelClassification', test_predictions_for_submission)"
       ],
-      "execution_count": 48,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Current answer for task MultilabelClassification is:\n",
-            " 0\t\n",
-            "1\t\n",
-            "2\truby-on-rails\n",
-            "3\truby\n",
-            "4\tjson,ruby-on-rails\n",
-            "5\t\n",
-            "6\t\n",
-            "7\tpython\n",
-            "8\tjavascript,jquery\n",
-            "9\thibernate,jav...\n"
+            " 0\tmysql,php\n",
+            "1\tjavascript,jquery\n",
+            "2\tpython\n",
+            "3\tjavascript,jquery\n",
+            "4\tandroid,java\n",
+            "5\tparsing,php,xml\n",
+            "6\tjson...\n"
           ],
           "name": "stdout"
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "Gjb5nEgw0DAZ",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "e805268a-c931-47fd-d878-e7c84bb6a0df"
-      },
-      "cell_type": "code",
-      "source": [
-        "mlb.inverse_transform(np.array([[0 if i!=0 else 1 for i in range(100)]]))"
-      ],
-      "execution_count": 66,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[('.net',)]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 66
         }
       ]
     },
@@ -2037,7 +1855,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 237
         },
-        "outputId": "dafd9b4a-f73e-45f7-aae3-4d57e2946699"
+        "outputId": "1ce7797b-3ede-48c1-8669-84b50d432581"
       },
       "cell_type": "code",
       "source": [
@@ -2045,7 +1863,7 @@
         "print_words_for_tag(classifier_tfidf, 'c++', mlb.classes, tfidf_reversed_vocab, ALL_WORDS)\n",
         "print_words_for_tag(classifier_tfidf, 'linux', mlb.classes, tfidf_reversed_vocab, ALL_WORDS)"
       ],
-      "execution_count": 68,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "stream",
@@ -2084,15 +1902,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 421
+          "height": 366
         },
-        "outputId": "ea5be2ff-cdb2-4c34-a3c4-9dd501338167"
+        "outputId": "182c2f4e-d43f-411a-da42-4d8465f31086"
       },
       "cell_type": "code",
       "source": [
         "grader.status()"
       ],
-      "execution_count": 69,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
@@ -2109,16 +1927,13 @@
             "Task BagOfWords:\n",
             " 7...\n",
             "Task MultilabelClassification:\n",
-            " 0\t\n",
-            "1\t\n",
-            "2\truby-on-rails\n",
-            "3\truby\n",
-            "4\tjson,ruby-on-rails\n",
-            "5\t\n",
-            "6\t\n",
-            "7\tpython\n",
-            "8\tjavascript,jquery\n",
-            "9\thibernate,jav...\n"
+            " 0\tmysql,php\n",
+            "1\tjavascript,jquery\n",
+            "2\tpython\n",
+            "3\tjavascript,jquery\n",
+            "4\tandroid,java\n",
+            "5\tparsing,php,xml\n",
+            "6\tjson...\n"
           ],
           "name": "stdout"
         }
@@ -2130,17 +1945,17 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 421
+          "height": 366
         },
-        "outputId": "bd5a5157-4abb-4675-c2cb-f1581c07e8c5"
+        "outputId": "de7636cc-a0b5-4fbd-c530-4c3767a863f9"
       },
       "cell_type": "code",
       "source": [
         "STUDENT_EMAIL = \"2.71828cotner@gmail.com\" # EMAIL \n",
-        "STUDENT_TOKEN = \"x86AR2gl2djLBoaG\" # TOKEN \n",
+        "STUDENT_TOKEN = \"MPybp556BEZIVpXs\" # TOKEN \n",
         "grader.status()"
       ],
-      "execution_count": 70,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
@@ -2157,16 +1972,13 @@
             "Task BagOfWords:\n",
             " 7...\n",
             "Task MultilabelClassification:\n",
-            " 0\t\n",
-            "1\t\n",
-            "2\truby-on-rails\n",
-            "3\truby\n",
-            "4\tjson,ruby-on-rails\n",
-            "5\t\n",
-            "6\t\n",
-            "7\tpython\n",
-            "8\tjavascript,jquery\n",
-            "9\thibernate,jav...\n"
+            " 0\tmysql,php\n",
+            "1\tjavascript,jquery\n",
+            "2\tpython\n",
+            "3\tjavascript,jquery\n",
+            "4\tandroid,java\n",
+            "5\tparsing,php,xml\n",
+            "6\tjson...\n"
           ],
           "name": "stdout"
         }
@@ -2190,13 +2002,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "f0405b0d-bc6a-498f-a295-cd4e99b4e08f"
+        "outputId": "ad498735-8dfc-4553-ca7f-305a81029c22"
       },
       "cell_type": "code",
       "source": [
         "grader.submit(STUDENT_EMAIL, STUDENT_TOKEN)"
       ],
-      "execution_count": 71,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "stream",
